--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -46,9 +46,8 @@
             <version>0.9.0</version>
         </dependency>
         <dependency>
-            <groupId>orm</groupId>
-            <artifactId>orm</artifactId>
-            <version>1.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
     
