--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,6 +4,15 @@ spring.datasource.username=postgres
 spring.datasource.password=clave123
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+spring.jpa.properties.hibernate.c3p0.max_size = 15
+spring.jpa.properties.hibernate.c3p0.min_size = 6
+spring.jpa.properties.hibernate.c3p0.timeout = 2500
+spring.jpa.properties.hibernate.c3p0.max_statements_per_connection = 10
+spring.jpa.properties.hibernate.c3p0.idle_test_period = 3000
+spring.jpa.properties.hibernate.c3p0.acquire_increment = 3
+spring.jpa.properties.hibernate.c3p0.validate = false
+spring.jpa.properties.hibernate.c3p0.numHelperThreads = 4
+
 spring.jpa.properties.hibernate.query.factory_class=org.hibernate.hql.internal.ast.ASTQueryTranslatorFactory
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
