--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,8 +1,18 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://mrroox.sytes.net:5432/arquitectura2
+spring.datasource.url=jdbc:postgresql://mrroox.sytes.net:5432/arquitectura2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&autoReconnect=true
 spring.datasource.username=postgres
 spring.datasource.password=clave123
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.datasource.max-active=10
+spring.datasource.initial-size=5
+spring.datasource.max-idle=5
+spring.datasource.min-idle=1
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+spring.datasource.time-between-eviction-runs-millis=5000
+spring.datasource.min-evictable-idle-time-millis=60000
 
 spring.jpa.properties.hibernate.c3p0.max_size = 15
 spring.jpa.properties.hibernate.c3p0.min_size = 6
