--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,27 +1,15 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://mrroox.sytes.net:5432/arquitectura2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&autoReconnect=true
+## spring.datasource.url=jdbc:postgresql://mrroox.sytes.net:5432/arquitectura2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&autoReconnect=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/arquitectura2
 spring.datasource.username=postgres
-spring.datasource.password=clave123
+spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.max-active=10
-spring.datasource.initial-size=5
-spring.datasource.max-idle=5
-spring.datasource.min-idle=1
-spring.datasource.test-while-idle=true
-spring.datasource.test-on-borrow=true
-spring.datasource.validation-query=SELECT 1
-spring.datasource.time-between-eviction-runs-millis=5000
-spring.datasource.min-evictable-idle-time-millis=60000
+spring.datasource.hikari.remove-abandoned=true
+spring.datasource.hikari.remove-abandoned-timeout=60
 
-spring.jpa.properties.hibernate.c3p0.max_size = 15
-spring.jpa.properties.hibernate.c3p0.min_size = 6
-spring.jpa.properties.hibernate.c3p0.timeout = 2500
-spring.jpa.properties.hibernate.c3p0.max_statements_per_connection = 10
-spring.jpa.properties.hibernate.c3p0.idle_test_period = 3000
-spring.jpa.properties.hibernate.c3p0.acquire_increment = 3
-spring.jpa.properties.hibernate.c3p0.validate = false
-spring.jpa.properties.hibernate.c3p0.numHelperThreads = 4
+spring.datasource.remove-abandoned=true
+spring.datasource.remove-abandoned-timeout=60
 
 spring.jpa.properties.hibernate.query.factory_class=org.hibernate.hql.internal.ast.ASTQueryTranslatorFactory
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
