--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 ## spring.datasource.url=jdbc:postgresql://mrroox.sytes.net:5432/arquitectura2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory&autoReconnect=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/arquitectura2
+spring.datasource.url=jdbc:postgresql://localhost:5432/db_arquitectura
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
